# cmake-conan-tutorial

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  conanfile.txt
src/: asl.cxx  asl.hpp
src/test/: asltest.cxx
